# pr-risk-lens

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/pr_risk_lens/: cli.py  git.py  report.py
tests/: test_cli.py  test_git.py  test_report.py
