[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pr-risk-lens"
version = "0.3.0"
description = "Transparent risk scoring for Python pull requests."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Mehdi Harrache" }
]
keywords = [
    "pull-request",
    "risk",
    "cli",
    "git",
    "ci",
    "python",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Version Control :: Git",
]

dependencies = [
    "rich",
    "typer",
]

[project.optional-dependencies]
dev = [
    "build",
    "pytest",
    "ruff",
    "twine",
]

[project.scripts]
pr-risk-lens = "pr_risk_lens.cli:app"

[project.urls]
Homepage = "https://github.com/Lokmir/pr-risk-lens"
Repository = "https://github.com/Lokmir/pr-risk-lens"
Issues = "https://github.com/Lokmir/pr-risk-lens/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]